--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,14 +40,12 @@ body {
 
 .logo2 {
   width: 85vw;
-  margin: 5vh 7vw 5vh 7vw
 }
 .app {
   font-family: 'Karla', sans-serif;
 }
 .content {
-  padding-top: 70px;
-
+  padding: 70px 20px 50px 20px
 }
 
 .start-title {
@@ -217,4 +215,16 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 .flex-inner {
   min-width: 0;
+}
+
+/* CITIES PAGE */
+
+.cities h1 {
+  text-align: center;
+  font-size: 1.7em;
+  margin-bottom: 20px
+}
+.cities button {
+  font-size: 1.3em;
+  margin-bottom: 10px
 }
