--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,16 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Karla', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+.content {
+  padding: 70px 20px 70px 20px
+}
+
+/* LANDING */
 .welcome-text {
   text-align: center;
   margin-top: 40px;
@@ -43,23 +46,9 @@ body {
   margin-top: 20px
 }
 
-.app {
-  font-family: 'Karla', sans-serif;
-}
-
-.content {
-  padding: 70px 20px 70px 20px
-}
-
 .start-title {
   text-align: center;
   margin: 3vh 0 3vh 0
-}
-
-.nav {
-  height: 70px;
-
-  background-color: white
 }
 
 .arrow-icon {
@@ -77,26 +66,11 @@ body {
   margin-right: auto
 }
 
-/* .landing {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-left: 20px;
-  margin-right: 20px
-} */
-
 .home-links {
   display: flex;
   justify-content: space-around;
   font-size: 1.1em;
   margin-top: 30px
-}
-
-.bottom-nav {
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  background-color: white
 }
 
 .home-icon {
@@ -134,119 +108,163 @@ body {
   height: 100%
 }
 
-.header-nav {
-  height: 70px;
+
+/* TOP NAVBAR */
+.toolbar-main {
+  display: flex;
+  justify-content: space-between;
+  height: 50px
 }
 
-/*HAMBURGER MENU*/
-/* Position and sizing of burger button */
-.bm-burger-button {
-  position: fixed;
-  width: 36px;
-  height: 30px;
-  right: 20px;
-  top: 20px;
-}
-
-/* Color/shape of burger icon bars */
-.bm-burger-bars {
-  background: #394E56;
-}
-
-/* Color/shape of burger icon bars on hover*/
-.bm-burger-bars-hover {
-  background: #394E56;
-}
-
-/* Position and sizing of clickable cross button */
-.bm-cross-button {
-  height: 24px;
-  width: 24px;
-}
-
-/* Color/shape of close button cross */
-.bm-cross {
-  background: #bdc3c7;
-}
-
-a.hamb-link {
-  color: #bdc3c7
+.toolbar-main .Header-menuButton-3 {
+  margin-right: 0px
 }
 
 
-/*
-Sidebar wrapper styles
-Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
-*/
-.bm-menu-wrap {
-  position: fixed;
-  height: 100%;
-}
-
-/* General sidebar styles */
-.bm-menu {
-  background: #394E56;
-  padding: 2.5em 1.5em 0;
-  font-size: 1.15em;
-}
-
-/* Morph shape necessary with bubble or elastic */
-.bm-morph-shape {
-  fill: #394E56;
-}
-
-/* Wrapper for item list */
-.bm-item-list {
-  color: #b8b7ad;
-  padding: 0.8em;
-}
-
-/* Individual item */
-.bm-item {
-  display: inline-block;
-}
-
-/* Styling of overlay */
-.bm-overlay {
-  background: rgba(0, 0, 0, 0.3);
-}
-
-
-.slick-slider .slick-track {
-  width: 100vw
-}
-
-.flex-inner {
-  min-width: 0;
+/* BOTTOM NAV */
+.home-link,
+.home-link:hover {
+  color: black
 }
 
 /* CITIES PAGE */
-
 .cities h1 {
   text-align: center;
-  font-size: 1.7em;
+
   margin-bottom: 20px
 }
 
 .cities button {
   font-size: 1.3em;
-  margin-bottom: 10px
+  margin-bottom: 10px;
+
 }
 
 .cities-filter {
   margin: 20px
 }
+
 .cities-filter input {
   text-align: center
 }
+
+.cities-filter p {
+  margin-bottom: 5px;
+  font-size: 1.2em
+}
+
 .city-list {
   text-align: center
 }
 
+.add-city h1 {
+  text-align: center
+}
+
+.add-city-btn {
+  display: block;
+  margin-top: 20px
+}
+
+.success {
+  display: flex;
+  flex-direction: column;
+  align-items: center
+}
+
+/* CITY PAGE */
+
+.city-title {
+  text-align: center;
+}
+
+.city-info a {
+  text-align: center
+}
+
+.itinerary-card {
+  margin-bottom: 20px
+}
+
+.card-summary {
+  display: flex;
+  justify-content: space-around;
+  padding: 0
+}
+
+.itinerary-title-details {
+  flex-grow: 3
+}
+
+.profile-pic-container {
+  flex-grow: 1;
+  width: 80px;
+  margin-right: 10px;
+  word-wrap: break-word;
+}
+.profile-pic-container p {
+  margin-bottom: 0;
+  font-size: 0.9rem;
+  text-align: center
+}
+
+.profile-pic {
+  height: 50px;
+  width: 50px;
+  border-radius: 50px
+}
+
+.back-link {
+  display: flex;
+  justify-content: center
+}
+
+.card-actions {
+  height: 50px;
+
+  background-color: lightgray;
+}
+
+.card-actions button {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.card-actions p {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 0
+}
+
+.itinerary-detail-preview {
+  display: flex;
+  flex-wrap: wrap
+}
+
+.itinerary-detail-preview span {
+  flex-grow: 1
+}
+
+.itinerary-detail-preview p {
+  flex-grow: 3
+}
+
+.slider {
+  margin-bottom: 40px
+}
+
+.slider-image {
+  height: 100px;
+  width: 100px
+}
+
+
+
 /* LOADER */
 .loader {
   display: flex;
-  justify-content: center
+  justify-content: center;
+  margin-bottom: 30px
 }
 
 .lds-default {
@@ -350,23 +368,3 @@ Note: Beware of modifying this element as it can break the animations - you shou
     transform: scale(1.5);
   }
 }
-
-
-
-
-
-
-.toolbar-main {
-  display: flex;
-  justify-content: space-between;
-  height: 50px
-}
-
-.toolbar-main .Header-menuButton-3 {
-  margin-right: 0px
-}
-
-.home-link, .home-link:hover {
-  color: black
-}
-
