--- a/client/src/index.css
+++ b/client/src/index.css
@@ -124,7 +124,7 @@ body {
 /* BOTTOM NAV */
 .home-link,
 .home-link:hover {
-  color: black
+  color: black;
 }
 
 /* CITIES PAGE */
@@ -155,6 +155,11 @@ body {
 
 .city-list {
   text-align: center
+}
+
+.city-list a {
+  color: black;
+  text-decoration: none
 }
 
 .add-city h1 {
@@ -398,3 +403,29 @@ body {
   flex-direction: column;
   align-items: center
 }
+
+/* COMMENTS */
+.comment-card {
+  margin-bottom: 10px
+}
+
+.comment-user {
+  margin-bottom: 0;
+  font-weight: bold
+}
+
+.comment-header {
+  display: flex;
+}
+
+.comment-user {
+  flex-grow: 3
+}
+
+button.comment-delete {
+  flex-grow: 1;
+  padding: 0;
+  display: flex;
+  justify-content: flex-end
+}
+
