--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,23 +12,10 @@ body {
 
 /* LANDING */
 .welcome-text {
-  text-align: center;
-  margin-top: 40px;
-  font-size: 1.1em
-}
-
-.welcome-text2 {
   margin-top: 20px;
   font-size: 1.2em;
   text-align: center;
   padding: 0 20px 0 20px
-}
-
-.popular {
-  text-align: left;
-  font-weight: bold;
-  margin-bottom: 0;
-  margin-top: 3vh
 }
 
 .header {
@@ -36,12 +23,6 @@ body {
 }
 
 .logo {
-  width: 85vw;
-  margin-left: 7vw;
-  margin-right: 7vw;
-}
-
-.logo2 {
   width: 85vw;
   margin-top: 20px
 }
@@ -59,6 +40,20 @@ body {
   margin-right: auto
 }
 
+
+/* ALTERNATIVE LANDING PAGES */
+.logo2 {
+  width: 85vw;
+  margin-left: 7vw;
+  margin-right: 7vw;
+}
+
+.welcome-text2 {
+  text-align: center;
+  margin-top: 40px;
+  font-size: 1.1em
+}
+
 .arrow-icon2 {
   height: 10vh;
   display: block;
@@ -66,26 +61,16 @@ body {
   margin-right: auto
 }
 
-.home-links {
-  display: flex;
-  justify-content: space-around;
-  font-size: 1.1em;
-  margin-top: 30px
-}
-
-.home-icon {
-  height: 40px;
-}
-
-.userpic {
-  margin-left: 5px;
-  margin-top: 5px;
-  position: fixed
-}
-
 .landing-pic {
   height: 100%;
   width: 100%;
+}
+
+.popular {
+  text-align: left;
+  font-weight: bold;
+  margin-bottom: 0;
+  margin-top: 3vh
 }
 
 .col {
@@ -108,6 +93,12 @@ body {
   height: 100%
 }
 
+.home-links {
+  display: flex;
+  justify-content: space-around;
+  font-size: 1.1em;
+  margin-top: 30px
+}
 
 /* TOP NAVBAR */
 .toolbar-main {
@@ -128,20 +119,18 @@ body {
 }
 
 /* CITIES PAGE */
-.cities h1 {
-  text-align: center;
-
-  margin-bottom: 20px
-}
 
 .cities {
   text-align: center
 }
 
+.cities h1 {
+  margin-bottom: 20px
+}
+
 .cities button {
   font-size: 1.3em;
   margin-bottom: 10px;
-
 }
 
 .cities-filter {
@@ -155,7 +144,6 @@ body {
   text-align: center;
   font-size: 20px;
   font-family: inherit;
-
 }
 
 .cities-filter p {
@@ -172,6 +160,7 @@ body {
   text-decoration: none
 }
 
+/* FORMS */
 .add-form h1 {
   text-align: center
 }
@@ -202,6 +191,13 @@ body {
   font-size: 18px;
   margin-bottom: 0
 }
+
+.edit-city {
+  display: flex;
+  flex-direction: column;
+  align-items: center
+}
+
 
 /* CITY PAGE */
 
@@ -283,6 +279,34 @@ body {
   flex-grow: 3
 }
 
+/* COMMENTS */
+.comment-card {
+  margin-bottom: 10px
+}
+
+.comment-user {
+  margin-bottom: 0;
+  font-weight: bold
+}
+
+.comment-header {
+  display: flex;
+}
+
+.comment-user {
+  flex-grow: 3
+}
+
+button.comment-delete {
+  flex-grow: 1;
+  padding: 0;
+  display: flex;
+  justify-content: flex-end
+}
+
+.slider {
+  padding: 10px 10px 30px 10px
+}
 
 .slider-image {
   height: 100px;
@@ -307,10 +331,6 @@ body {
 .activity-caption p {
   margin-bottom: 0;
 }
-
-
-
-
 
 /* LOADER */
 .loader {
@@ -419,41 +439,4 @@ body {
   50% {
     transform: scale(1.5);
   }
-}
-
-
-/* EDIT CITY */
-.edit-city {
-  display: flex;
-  flex-direction: column;
-  align-items: center
-}
-
-/* COMMENTS */
-.comment-card {
-  margin-bottom: 10px
-}
-
-.comment-user {
-  margin-bottom: 0;
-  font-weight: bold
-}
-
-.comment-header {
-  display: flex;
-}
-
-.comment-user {
-  flex-grow: 3
-}
-
-button.comment-delete {
-  flex-grow: 1;
-  padding: 0;
-  display: flex;
-  justify-content: flex-end
-}
-
-.slider {
-  padding: 10px 10px 30px 10px
 }
