--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,14 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Karla', sans-serif;
+  /*   font-family: 'Karla', sans-serif;
+ */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 .content {
-  padding: 70px 20px 70px 20px
+  padding: 70px 20px 70px 20px;
 }
 
 /* LANDING */
@@ -161,6 +162,12 @@ body {
 }
 
 /* FORMS */
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center
+}
+
 .add-form h1 {
   text-align: center
 }
@@ -187,12 +194,57 @@ body {
   align-items: center
 }
 
-.select p {
+.select p,
+.form p {
   font-size: 18px;
   margin-bottom: 0
 }
 
 .edit-city {
+  display: flex;
+  flex-direction: column;
+  align-items: center
+}
+
+.form-item {
+  display: flex;
+}
+
+label.form-label {
+  font-size: 1.2rem;
+  padding-top: 20px;
+  width: 100px;
+  text-align: right
+}
+
+li.select-option {
+  font-size: 1.1rem
+}
+
+.upload-userpic {
+  border: 1px solid black;
+  border-radius: 75px;
+  height: 150px;
+  width: 150px
+}
+
+.terms {
+  display: flex;
+  margin-top: 30px;
+  align-items: center
+}
+
+.terms p {
+  margin-bottom: 0
+}
+
+.title {
+  text-align: center;
+
+}
+
+.login-text {
+  margin-top: 40px;
   display: flex;
   flex-direction: column;
   align-items: center
