--- a/client/src/index.css
+++ b/client/src/index.css
@@ -214,7 +214,8 @@ label.form-label {
   font-size: 1.2rem;
   padding-top: 20px;
   width: 100px;
-  text-align: right
+  text-align: right;
+  color: black
 }
 
 li.select-option {
@@ -225,8 +226,35 @@ li.select-option {
   border: 1px solid black;
   border-radius: 75px;
   height: 150px;
-  width: 150px
+  width: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  position: relative
 }
+
+.upload-userpic input,
+.upload-userpic label {
+  max-width: 100px;
+}
+
+.upload-userpic img {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  border-radius: 75px;
+  z-index: -1
+}
+
+.clear-img {
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: black
+}
+
 
 .terms {
   display: flex;
