--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,6 +28,21 @@ body {
   margin-top: 20px
 }
 
+@media only screen and (min-device-width: 768px) and (max-device-width: 1600px) {
+  .logo {
+    width: 40%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+  }
+
+  .logo-container {
+    width: 100%;
+  }
+}
+
+
+
 .start-title {
   text-align: center;
   margin: 3vh 0 3vh 0
@@ -558,11 +573,15 @@ button.comment-delete {
   align-items: center
 }
 
+.title-fav h4 {
+  width: 75%
+}
+
 .itinerary-title-details h4 {
   font-size: 1.2rem
 }
 
-.dashboard h1 {
+.dashboard h2 {
   text-align: center
 }
 
@@ -591,4 +610,14 @@ button.comment-delete {
 
 .price-select {
   flex-grow: 2
+}
+
+.itinerary-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center
+}
+
+h4 {
+  text-align: center
 }
