--- a/client/src/stylesheets/views/_forms.scss
+++ b/client/src/stylesheets/views/_forms.scss
@@ -63,8 +63,10 @@
   }
 }
 
-.add-activity {
+div.add-activity {
   width: 95%;
+  margin: 10px 0 10px 0;
+  background-color: lightgray;
   div {
     padding-bottom: 0;
   }
