fixed comments issue

--- a/client/src/stylesheets/views/_forms.scss
+++ b/client/src/stylesheets/views/_forms.scss
@@ -71,3 +71,10 @@ div.add-activity {
     padding-bottom: 0;
   }
 }
+
+.add-another-act {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  text-align: left;
+}
